fixed some spacing on home and hiking

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -110,6 +110,11 @@ p, a {
   padding-bottom: 1rem
 }
 
+.front-container {
+  padding-top: 3rem;
+  padding-bottom: 5rem;
+}
+
 .publisher {
   color: #999999;
   font-size: 0.9em;
